kubernetes/base/cron-delta-deleter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cron-delta-deleter-deployment
  labels:
    workbenchdata.com/preemptible: "true"
    workbenchdata.com/uses-database: "true"
    workbenchdata.com/uses-s3: "true"
spec:
  selector:
    matchLabels:
      app: cron-delta-deleter-app
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: cron-delta-deleter-app
    spec:
      serviceAccountName: cron-sa
      containers:
      - name: app
        image: "gcr.io/workbenchdata-ci/cron:latest"
        command: [ "bin/cron-delta-deleter" ]
        resources:
          requests:
            cpu: 0.1
            memory: 200Mi
          limits:
            cpu: 0.1
            memory: 200Mi
        envFrom: []
