kubernetes/base/http-404-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-404-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-404-app
  template:
    metadata:
      labels:
        app: http-404-app
    spec:
      containers:
      - name: http-404
        image: "haproxy:2.1.2"
        command: [ "haproxy", "-f", "/usr/local/etc/haproxy/haproxy.cfg", "-m", "90", "-db" ]
        resources:
          requests:
            cpu: 0.1
            memory: 50Mi
          limits:
            cpu: 0.1
            memory: 50Mi
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
        volumeMounts:
        - mountPath: /usr/local/etc/haproxy/haproxy.cfg
          name: http-404-config
          subPath: haproxy.cfg
        - mountPath: /usr/local/etc/haproxy/404.http
          name: http-404-config
          subPath: 404.http
      volumes:
      - name: http-404-config
        configMap:
          name: http-404-config
