kubernetes/base/intercom-sink-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intercom-sink-deployment
  labels:
    workbenchdata.com/uses-rabbitmq: "true"
spec:
  selector:
    matchLabels:
      app: intercom-sink-app
  template:
    metadata:
      labels:
        app: intercom-sink-app
    spec:
      containers:
      - name: app
        image: "gcr.io/workbenchdata-ci/cjw-intercom-sink:98677d4a4fa499982b0dedf31a0c2fe1e1ab5467"
        resources:
          requests:
            cpu: 150m
            memory: 300Mi
          limits:
            cpu: 150m
            memory: 300Mi
