kubernetes/base/renderer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: renderer-deployment
  labels:
    workbenchdata.com/unsafe: "true"
    workbenchdata.com/preemptible: "true"
    workbenchdata.com/uses-database: "true"
    workbenchdata.com/uses-rabbitmq: "true"
    workbenchdata.com/uses-s3: "true"
    workbenchdata.com/uses-smtp: "true"
spec:
  selector:
    matchLabels:
      app: renderer-app
  template:
    metadata:
      labels:
        app: renderer-app
    spec:
      serviceAccountName: renderer-sa
      containers:
      - name: app
        image: "gcr.io/workbenchdata-ci/renderer:latest"
        volumeMounts:
        - mountPath: /var/lib/cjwkernel/chroot
          name: chroot
        securityContext:
          capabilities:
            add:
            # TODO ban render() from networking. Period. Then nix NET_ADMIN priv.
            - NET_ADMIN # To create network interface for sandbox in cjwkernel
      - name: teardown-sandboxes
        # "any volume mounts created by Containers in Pods must be destroyed
        # (unmounted) by the Containers on termination"
        # -- https://kubernetes.io/docs/concepts/storage/volumes/#mount-propagation
        image: "gcr.io/workbenchdata-ci/renderer:latest"
        command: ["sh", "-c", "sleep infinity"]  # do nothing, until exit. (sh responds to INT signal)
        securityContext:
          privileged: true  # so it can unmount
        lifecycle:
          preStop:
            exec:
              command: ["bash", "-x", "/app/cjwkernel/teardown-sandboxes.sh"]
        volumeMounts:
        - mountPath: /var/lib/cjwkernel/chroot
          name: chroot
          mountPropagation: Bidirectional  # expose mounts to main app
      volumes:
      - name: chroot
        emptyDir: {}
