kubernetes/base/tusd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tusd-deployment
spec:
  selector:
    matchLabels:
      app: tusd-app
  template:
    metadata:
      labels:
        app: tusd-app
    spec:
      serviceAccountName: tusd-sa
      affinity:  #  don't put them all on the same node
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - tusd-app
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: tusd
        image: tusproject/tusd:v1.6.0
        resources:
          requests:
            cpu: 0.3
            memory: 512Mi
          limits:
            cpu: 0.3
            memory: 512Mi
        readinessProbe:
          httpGet:
            path: /metrics
            port: 8080
        args:
        - -port=8080
        - -behind-proxy
        - "-gcs-bucket=upload.$(DOMAIN_NAME)"
        - "-hooks-http=http://tusd-hooks-service/tusd-hooks"
        - -hooks-enabled-events=pre-finish
