kubernetes/base/frontend-internal-tusd-hooks-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-internal-tusd-hooks-service
spec:
  selector:
    app: frontend-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
