kubernetes/base/frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
  annotations:
spec:
  selector:
    app: frontend-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
