kubernetes/base/tusd-internal-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: tusd-internal-service
spec:
  selector:
    app: tusd-app
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
