kubernetes/base/tusd-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: tusd-service
spec:
  selector:
    app: tusd-app
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
