kubernetes/base/tusd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tusd-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: tusd-ip
    networking.gke.io/managed-certificates: tusd-cert
spec:
  rules:
  - http:
      paths:
      - path: /files  # spelling #1
        pathType: Exact
        # tusd allows POST to /files and /files/, to create files. This is a
        # SECURITY risk. Prevent end-user users from POSTing to /files by
        # responding with HTTP 404 if they try
        backend:
          service:
            name: http-404-service
            port:
              number: 80
      - path: /files/  # spelling #2
        pathType: Exact
        backend:
          service:
            name: http-404-service
            port:
              number: 80
      - path: /files/
        pathType: Prefix
        # This is the crux of tusd: the actual already-created file uploads.
        # Let users POST to the ones they know the URLs for.
        backend:
          service:
            name: tusd-service
            port:
              number: 80
